--- a/server/views/employees/index.ejs
+++ b/server/views/employees/index.ejs
@@ -1,5 +1,16 @@
 <% include ../partials/header.ejs %>
 
+<!--
+  File name: COMP229-F2022-Midterm-301101604
+  Student name: Thuan An Quan
+  Student ID: 301101604
+  Web app name: comp229-f2022midterm-301101604.herokuapp.com
+  Course: COMP229 - Section 008
+  Name: Web Application Development
+  Professor: Zakiyabanu Malek
+  Date: October 26, 2022
+-->
+
 <!-- MAIN CONTENT -->
 <div class="container">
   <div class="row">
