--- a/server/views/content/index.ejs
+++ b/server/views/content/index.ejs
@@ -1,13 +1,33 @@
 <% include ../partials/header.ejs %>
 
+<!--
+  File name: COMP229-F2022-Midterm-301101604
+  Student name: Thuan An Quan
+  Student ID: 301101604
+  Web app name: comp229-f2022midterm-301101604.herokuapp.com
+  Course: COMP229 - Section 008
+  Name: Web Application Development
+  Professor: Zakiyabanu Malek
+  Date: October 26, 2022
+-->
+
     <!-- MAIN CONTENT -->
     <div class="container">
       <div class="row">
-        <div class="col-md-offset-3 col-md-6">
-          <h1><%= title %></h1>
-            <h2>Welcome to <%= title %></h2>
+        <div class="edit col-md-offset-3 col-md-6">
+          <h1 id="size">Welcome to <%= title %></h1>
         </div>
       </div>
+    </div>
+
+    <div class="info">
+      <p>
+        Hello everyone, welcome to my own portfolio!<br>
+        Hope you guys all enjoy!<br>
+        My mission is to complete all the web development works and create a much better website!<br>
+        Let's dive into it and know a little bit more about me!
+      </p>
+      <a class="btn btn-info" href="/employees" role="button"><h4>Employee List</h4></a>
     </div>
 
 <% include ../partials/footer.ejs %>
