--- a/client/Content/app.css
+++ b/client/Content/app.css
@@ -53,3 +53,10 @@ body {
   background-color: rgb(201,215,216);
 }
 
+.btn-sm{
+  float: right;
+  width: 70px;
+  height: 30px;
+  margin-bottom: 20px;
+}
+
